Add yajra's datatable package as dependency in composer.json

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "league/fractal": "^0.16.0"
+        "league/fractal": "^0.16.0",
+        "yajra/laravel-datatables-oracle": "^7.4"
     },
     "autoload": {
         "psr-4": {
