Modify composer.json, add nwidart module package in suggestion

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
             "Rashidul\\RainDrops\\": "src/"
         }
     },
+    "suggest": {
+        "nwidart/laravel-modules": "Module Management In Laravel"
+    },
     "minimum-stability":"dev"
 
 }
