Change Yajra package version to 8.* to support Laravel 5.5

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "league/fractal": "^0.16.0",
-        "yajra/laravel-datatables-oracle": "^7.4"
+        "yajra/laravel-datatables-oracle": "8.*"
     },
     "autoload": {
         "psr-4": {
