--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "league/fractal": "^0.16.0",
-        "yajra/laravel-datatables-oracle": "8.*"
+        "yajra/laravel-datatables-fractal": "^1.0",
+        "yajra/laravel-datatables-oracle": "^8.0"
     },
     "autoload": {
         "psr-4": {
