Add Laravel 5.5 package auto discovery

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,13 @@
     "suggest": {
         "nwidart/laravel-modules": "Module Management In Laravel"
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rashidul\\RainDrops\\RainDropsServiceProvider"
+            ]
+        }
+    },
     "minimum-stability":"dev"
 
 }
